<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_purple_gradient_bg"
    tools:context=".GirişEkrani">

    <ImageView
        android:id="@+id/img_app_logo_center"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/inekresmi"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintBottom_toTopOf="@+id/text_app_title_center"
        />

    <TextView
        android:id="@+id/text_app_title_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/farm_app_title"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@color/text_main_dark_blue"
        app:layout_constraintTop_toBottomOf="@+id/img_app_logo_center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/group_auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="@color/card_background_light_blue"
        app:layout_constraintTop_toBottomOf="@+id/text_app_title_center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/l_tfen_giri_yap_n_veya_kaydolun"
                android:textSize="17sp"
                android:textColor="@color/text_card_header_blue"
                android:layout_marginBottom="25dp"/>

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_posta"
                android:inputType="textEmailAddress"
                android:background="@drawable/edittext_solid_white_round"
                android:padding="14dp"
                android:layout_marginBottom="15dp"
                android:maxLength="20"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_dark_gray"/>

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ifre_min_6_karakter"
                android:inputType="textPassword"
                android:background="@drawable/edittext_solid_white_round"
                android:padding="14dp"
                android:layout_marginBottom="30dp"
                android:maxLength="15"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_dark_gray"/>

            <Button
                android:id="@+id/buttonSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:backgroundTint="@color/my_blue"
                android:text="@string/g_r_yap"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kayit_ol"
                android:backgroundTint="@color/my_dark_blue"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"/>

            <Button
                android:id="@+id/btnAdminPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="🔒 Admin Girişi"
                android:backgroundTint="#D32F2F"
                android:textColor="#FFFFFF"
                android:textStyle="bold"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>